tests/error/type_errors/if_not_bool_functional.py
from guppy.decorator import guppy


@guppy(compile=True)
def foo() -> int:
    _@functional
    if 42:
        return 0
    return 1
